--- a/be/package.json
+++ b/be/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
-    "express": "^4.21.1"
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.3"
   },
   "scripts": {
     "start": "node server.js",
@@ -9,10 +15,10 @@
   "name": "be",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Eric",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
